# reinvent-ml-server

./: .env.example  .gitignore  Caddyfile  Caddyfile.local  Dockerfile  README.md  compose.inference.dev.yaml  install_sys_deps.sh  main.py  pyproject.toml
extra_files/: README.md  api_old.py  inference.py  pipeline2.py  vrs_to_calibrated.py
scenescript/: download_examples.sh  inference.ipynb
scenescript/src/data/: language_sequence.py  point_cloud.py
scenescript/src/networks/: encoder.py  scenescript_model.py
src/ml_service/: app.py  config.py  dependencies.py  main.py  startup.py
src/ml_service/models/: docling_models.py  scenescript_models.py
src/ml_service/routers/: docling_router.py  scenescript_router.py
